Revert Safari navbar fixes and add mobile horizontal scroll prevention

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Black Light Results — Websites die Kunden bringen</title>
   <meta name="description" content="AI-gestütztes Webdesign für kleine Unternehmen. Professionelle Website in 1-2 Wochen. Mehr Kunden, weniger Aufwand.">
 
