Add animated scroll indicator below hero buttons to guide visitors down

--- a/index.html
+++ b/index.html
@@ -102,6 +102,13 @@
             <div class="trust-label">Erstberatung</div>
           </div>
         </div>
+
+        <!-- Scroll indicator -->
+        <div class="scroll-indicator">
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+            <polyline points="6 9 12 15 18 9"></polyline>
+          </svg>
+        </div>
       </div>
     </div>
   </section>
